--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,7 @@ sourceCompatibility = '17'
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    implementation 'org.projectlombok:lombok:1.18.22'
+}
